--- a/1_cn_extractor/config.ini
+++ b/1_cn_extractor/config.ini
@@ -1,11 +1,11 @@
 # 必填：本地待处理 RNX 文件根目录（程序会递归找 *.rnx / *.obs）
-input_dir=..\data\obs
+input_dir=..\data\test_obs
 
 # 可选：输出根目录（默认 <work>/out）
-output_dir=..\data\1_cn0_raw
+output_dir=..\data\test_1_cn0_raw
 
 # 工作根目录（日志、临时）
-work=E:\projects\ML_FP\1_cn_extractor
+work=E:\projects\ML_FP\test_1_cn_extractor
 
 # 想处理的信号——仅在这里配置！
 # 例：GPS: S1C,S1W,S2W；BDS: S2I,S6I,S7I
