--- a/2_dataset_processor/config.ini
+++ b/2_dataset_processor/config.ini
@@ -1,16 +1,12 @@
 [paths]
 # 输入CSV文件夹路径
-input_csv_dir = ../data/test_1_cn0_raw
+input_csv_dir = ../data/1_cn0_raw
 
 # SP3星历文件夹路径
 sp3_dir = ../data/sp3
 
 # 输出文件夹路径
-output_dir = ../data/test_2_raw_datasets
-
-[processing]
-# 历史数据序列长度
-history_epochs = 10
+output_dir = ../data/2_raw_datasets
 
 # 是否使用前后一天的SP3文件进行更精确的插值
 use_adjacent_sp3 = true
