修正了结果

--- a/4_convert_to_dataset/config.ini
+++ b/4_convert_to_dataset/config.ini
@@ -1,18 +1,18 @@
 [data]
-raw_root = E:/projects/ML_FP/data/2/3_labeled_raw_datasets
-processed_data_dir = E:/projects/ML_FP/data/2/4_raw_dataset
+raw_root = E:/projects/ML_FP/data/3_labeled_raw_datasets
+processed_data_dir = E:/projects/ML_FP/data/4_raw_dataset
 window_size = 5
 allow_constellations = G
 
 [split]
-all_to_test = true
+all_to_test = False
 # 这些测站的所有 DOY 都进入测试集 —— 你的需求：cusv
-always_test_stations =
+always_test_stations = cusv
 # 所有测站在这些 DOY 也进入测试集 —— 你的需求：2024153
-test_doys =
+test_doys = 2024153
 # 以下可留空（默认处理全部测站，非 test 的都归 train）
 station_whitelist =
-station_blacklist = CUSV, DARW, MAR6, KIR8, KAT1, YARR, PNGM,POVE, AREG,FALK,KOUG,AMC4,ABMF,BREW,WUHN,DAEJ,BIK0,ARUC,HAL1,THTG,ARHT,ZAMB,ABPO,NKLG
+station_blacklist =
 train_doys =
 val_split_ratio = 0.10
 
